[gd_scene load_steps=13 format=3 uid="uid://ck8ttsctrjixj"]

[ext_resource type="Script" path="res://Scenes/TrainingProgram/parts/GameplayLoop/parts/RoomInfo/parts/abilities_panel.gd" id="1_ca3oi"]
[ext_resource type="LabelSettings" uid="uid://nrxe2mbka1e4" path="res://Fonts/game/label_small_thick.tres" id="2_5xkpy"]
[ext_resource type="FontFile" uid="uid://gev2kme45ctq" path="res://Fonts/Mx437_Portfolio_6x8.ttf" id="2_8kspe"]
[ext_resource type="PackedScene" uid="uid://b8hw5jenpkiw8" path="res://UI/Buttons/TextBtn/TextBtn.tscn" id="3_3y3wk"]
[ext_resource type="LabelSettings" uid="uid://cwas73lpm1tqt" path="res://Fonts/game/label_medium.tres" id="4_72r62"]
[ext_resource type="LabelSettings" uid="uid://bhvjm3opd1txx" path="res://Fonts/game/label_small.tres" id="5_bbpax"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tud4s"]
bg_color = Color(0, 0, 0, 0.796078)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_q73qc"]
bg_color = Color(0.054902, 0.054902, 0.054902, 0.796078)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ynjwk"]
bg_color = Color(0.054902, 0.054902, 0.054902, 0.796078)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_t7ytq"]
bg_color = Color(0.054902, 0.054902, 0.054902, 0.796078)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7nh3o"]
corner_radius_top_right = 5
corner_radius_bottom_right = 5

[sub_resource type="LabelSettings" id="LabelSettings_w2clb"]
font = ExtResource("2_8kspe")
font_size = 8
outline_size = 8
outline_color = Color(0, 0, 0, 1)

[node name="Abilities" type="VBoxContainer"]
theme_override_constants/separation = 8
script = ExtResource("1_ca3oi")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_tud4s")

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = -10
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/HBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/HBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="PanelContainer/HBoxContainer/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = " ABILITIES"
label_settings = ExtResource("2_5xkpy")
vertical_alignment = 1
clip_text = true
text_overrun_behavior = 3

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/HBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 5
theme_override_constants/margin_right = 5

[node name="List" type="VBoxContainer" parent="PanelContainer/HBoxContainer/MarginContainer/VBoxContainer/MarginContainer"]
layout_mode = 2

[node name="TextBtn" parent="PanelContainer/HBoxContainer/MarginContainer/VBoxContainer/MarginContainer/List" instance=ExtResource("3_3y3wk")]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_q73qc")
icon = 14
title = "ABILITY 1  (5)"

[node name="TextBtn2" parent="PanelContainer/HBoxContainer/MarginContainer/VBoxContainer/MarginContainer/List" instance=ExtResource("3_3y3wk")]
modulate = Color(1, 0, 0, 1)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ynjwk")
icon = 1
is_disabled = true
title = "ABILITY 1  (5)"

[node name="TextBtn3" parent="PanelContainer/HBoxContainer/MarginContainer/VBoxContainer/MarginContainer/List" instance=ExtResource("3_3y3wk")]
modulate = Color(1, 0, 0, 1)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_t7ytq")
icon = 1
is_disabled = true
title = "ABILITY 1  (5)"

[node name="PanelContainer" type="PanelContainer" parent="PanelContainer/HBoxContainer"]
visible = false
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_7nh3o")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/HBoxContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_top = -10

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/HBoxContainer/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = -2

[node name="Label3" type="Label" parent="PanelContainer/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "AP"
label_settings = SubResource("LabelSettings_w2clb")
horizontal_alignment = 1
vertical_alignment = 1
clip_text = true
text_overrun_behavior = 3

[node name="VBoxContainer2" type="VBoxContainer" parent="PanelContainer/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 0
alignment = 1

[node name="ApLabel" type="Label" parent="PanelContainer/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer2"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "-1"
label_settings = ExtResource("4_72r62")
horizontal_alignment = 1
vertical_alignment = 1
clip_text = true
text_overrun_behavior = 3

[node name="ApDiffLabel" type="Label" parent="PanelContainer/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer2"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "-1"
label_settings = ExtResource("5_bbpax")
horizontal_alignment = 1
vertical_alignment = 1
clip_text = true
text_overrun_behavior = 3
